added burger menu start

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                     </a>
                 </div>
                 <!-- header__logo -->
-
+                <button class="header__burger-btn">
+                    <img class="header__burger-img" src="./assets/images/menu.svg" alt="menu">
+                </button>
 
             </div> <!-- header-top -->
 
