header adaptive in media 768px and 1440px

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header class="header">
+
         <div class="container">
             <div class="header__top">
                 <div class="header__navigation">
@@ -39,6 +40,7 @@
                         <!-- menu__list -->
                     </nav>
                     <!-- header-menu menu -->
+
                     <div class="header__right-block">
                         <div class="header__personal personal">
                             <ul class="personal__list">
@@ -81,20 +83,21 @@
                             </ul>
                         </div>
                         <!-- header__social -->
+
                     </div>
-                    <!-- header-block -->
+                    <!-- header__right-block -->
+
                 </div>
                 <!-- header__navigation -->
+                <button class="header__burger-btn">
+                    <img class="header__burger-img" src="./assets/images/menu.svg" alt="menu">
+                </button>
                 <div class="header__logo logo">
                     <a class="logo__link" href="#">
                         <img class="logo__img" src="assets/images/logo.png" alt="logo">
                     </a>
                 </div>
                 <!-- header__logo -->
-                <button class="header__burger-btn">
-                    <img class="header__burger-img" src="./assets/images/menu.svg" alt="menu">
-                </button>
-
             </div> <!-- header-top -->
 
             <div class="header__content">
