fixed bags adaptive header css start adaptive smoothies

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header class="header">
 
+    <header class="header">
         <div class="container">
             <div class="header__top">
                 <div class="header__navigation">
@@ -109,7 +109,7 @@
         <!-- container -->
     </header>
     <!-- header -->
-    <!-- 
+
     <section class="smoothies">
         <h2 class="smoothies__title title title--orange">What are these smoothies?</h2>
         <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables,
@@ -122,55 +122,55 @@
             powder,
             plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </p>
-        text
+        <!-- text -->
 
         <div class="smoothies__cards cards">
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Plant_Based.png" alt="Plant Based">
                 <h3 class="cards__desc">Plant Based</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/vegan.png" alt="vegan">
                 <h3 class="cards__desc">Vegan</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Paleo.png" alt="Paleo">
                 <h3 class="cards__desc">Paleo</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Gluten_Free.png" alt="Gluten-Free">
                 <h3 class="cards__desc">Gluten-Free</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Corn_Free.png" alt="Corn-Free">
                 <h3 class="cards__desc">Corn-Free</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Soy_Free.png" alt="Soy-Free">
                 <h3 class="cards__desc">Soy-Free</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Ayurvedic.png" alt="Ayurvedic">
                 <h3 class="cards__desc">Ayurvedic</h3>
             </div>
-            cards__content
+
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Made_With_Love.png" alt="Made With Love">
                 <h3 class="cards__desc">Made With Love</h3>
             </div>
-            cards__content
+
         </div>
-        smoothies__cards cards
+        <!-- smoothies__cards cards -->
 
     </section>
-    smoothies
-
+    <!-- smoothies -->
+    <!-- 
     <section class="about">
         <img class="about__img" src="assets/images/summer.png" alt="summer">
         <div class="about__wrapper">
@@ -193,8 +193,8 @@
         </div>
         about__wrapper
     </section>
-    about
-
+    about -->
+    <!-- 
     <section class="products">
         <div class="products__wrapper">
             <div class="product__item product__item--brown">
@@ -224,8 +224,8 @@
         </div>
         products__wrapper
     </section>
-    products
-
+    products -->
+    <!-- 
     <section class="story">
         <div class="story__inner">
             <div class="story__box">
@@ -246,8 +246,8 @@
         </div>
         story__inner
     </section>
-    story
-
+    story -->
+    <!-- 
     <section class="testimonials">
         <div class="testimonials__inner">
             <h2 class="testimonials__title title title--orange">Why clients <span
@@ -271,8 +271,8 @@
         </div>
         testimonials__inner
     </section>
-    testimonials
-
+    testimonials -->
+    <!-- 
     <section class="blog">
         <div class="blog__wrapper">
             <div class="blog__box">
@@ -295,8 +295,8 @@
         </div>
         blog__wrapper
     </section>
-    Blog
-
+    blog -->
+    <!-- 
     <section class="instagram">
         <h2 class="instagram__title title title--green"><a class="instagram__link" href="#">ashasuperfoods</a></h2>
         <div class="instagram__inner">
@@ -313,8 +313,8 @@
         </div>
         instagram__inner
     </section>
-    Instagram
-
+    Instagram -->
+    <!-- 
     <footer class="footer">
         <div class="footer__top">
             <div class="footer__wrapper">
@@ -389,6 +389,7 @@
         </div>
         footer__bottom
     </footer> -->
+
 </body>
 
 </html>
