--- a/index.html
+++ b/index.html
@@ -11,28 +11,7 @@
 </head>
 
 <body>
-    <script>
-        const headerBurgerBtn = document.querySelector('.header__burger-btn');
 
-        function toggleHeaderBurgerBtn() {
-            headerNavigation.classList.toggle('active')
-        }
-
-        toggleHeaderBurgerBtn.addEventListener('click', toggleHeaderNavigation);
-
-        // function myFunction(x) {
-        //     x.classList.toggle("change");
-        // }
-
-        // function toogleSlideMenu(x) {
-        //     if (x.classList.contains('change')) {
-        //         document.getElementById('burger-menu').style.width = '100%';
-        //     } else {
-        //         document.getElementById('burger-menu').style.width = '0px';
-        //     }
-        // }
-        // document.getElementById('burger-menu').classList.toggle("open");
-    </script>
     <header class="header">
         <div class="container">
             <div class="header__top">
@@ -110,7 +89,8 @@
 
                 </div>
                 <!-- header__navigation -->
-                <button class="header__burger-btn" oncick="toggleHeaderBurgerBtn">
+                <button class="header__burger-btn">
+                    <span></span>
                     <img class="header__burger-img" src="./assets/images/menu.svg" alt="menu">
                 </button>
                 <div class="header__logo logo">
@@ -411,6 +391,9 @@
         footer__bottom
     </footer> -->
 
+    <script src="./js/script.js">
+
+    </script>
 
 </body>
 
