--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         footer__bottom
     </footer> -->
 
-    <script src="./js/script.js">
+    <script src="../js/script.js">
 
     </script>
 
