--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
             <button class="about__btn btn btn--border-orange"> About Organic Smoothie
             </button>
         </div>
-        about__wrapper
-    </section>
-    about -->
+        <!-- about__wrapper -->
+    <!-- </section> -->
+    <!-- about --> -->
     <!-- 
     <section class="products">
         <div class="products__wrapper">
@@ -391,7 +391,7 @@
         footer__bottom
     </footer> -->
 
-    <script src="../js/script.js">
+    <script src="./js/script.js">
 
     </script>
 
