added animation in block header

--- a/index.html
+++ b/index.html
@@ -66,16 +66,19 @@
                             <ul class="social__list">
                                 <li class="social__item">
                                     <a class="social__link" href="#">
+                                        <!-- <span class="social__facebook">facebook</span> -->
                                         <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
                                     </a>
                                 </li>
                                 <li class="social__item">
                                     <a class="social__link" href="#">
+                                        <!-- <span class="social__pinterest">pinterest</span> -->
                                         <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
                                     </a>
                                 </li>
                                 <li class="social__item">
                                     <a class="social__link" href="#">
+                                        <!-- <span class="social__instagram">instagram</span> -->
                                         <img class="social__icon" src="assets/images/instagram_icon.png"
                                             alt="instagram">
                                     </a>
