added animation in btn and fixed bags in css

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <!-- testimonials__box -->
             <div class="testimonials__container">
                 <button class="testimonials__btn-left"></button>
-                <button class="testimonials__bton-right"></button>
+                <button class="testimonials__btn-right"></button>
             </div>
             <!-- testimonials__container -->
         </div>
