--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header" id="top">
         <div class="container">
             <div class="header__top">
                 <div class="header__navigation">
@@ -271,8 +271,8 @@
             </div>
             <!-- testimonials__box -->
             <div class="testimonials__container">
-                <button class="testimonials__btn-left"></button>
-                <button class="testimonials__btn-right"></button>
+                <button class="testimonials__btn-left btn"></button>
+                <button class="testimonials__btn-right btn"></button>
             </div>
             <!-- testimonials__container -->
         </div>
@@ -349,9 +349,11 @@
                         <img class="payment__img" src="assets/images/maestro.png" alt="maestro">
                         <img class="payment__img" src="assets/images/discover.png" alt="discover">
                         <img class="payment__img" src="assets/images/jcb.png" alt="jcb">
-                        <img class="payment__img" src="assets/images/paypal.png" alt="paypal">
                         <img class="payment__img" src="assets/images/mastercard.png" alt="mastercard">
+                        <img class="payment__img" src="assets/images/paypal.png" alt="paypal">
+
                         <img class="payment__img" src="assets/images/shopify_pay.png" alt="shopify pay">
+
                         <img class="payment__img" src="assets/images/visa.png" alt="visa">
                     </div>
                     <!-- payment__box -->
@@ -395,7 +397,7 @@
         <div class="footer__bottom ">
             <small class="footer__small">© 2020. All Rights Reserved.</small>
 
-            <a href="#" class="footer__link"></a>
+            <a href="#top" class="footer__link"></a>
         </div>
         <!-- footer__bottom -->
     </footer>
