--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </header>
     <!-- header -->
 
-    <section class="smoothies">
+    <!-- <section class="smoothies">
         <h2 class="smoothies__title title title--orange">What are these smoothies?</h2>
         <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables,
             and
@@ -127,7 +127,7 @@
             plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </p>
         <!-- text -->
-
+    <!-- 
         <div class="smoothies__cards cards">
             <div class="cards__item">
                 <img class="cards__icon" src="assets/images/Plant_Based.png" alt="Plant Based">
@@ -169,10 +169,10 @@
                 <h3 class="cards__desc">Made With Love</h3>
             </div>
 
-        </div>
-        <!-- smoothies__cards cards -->
+        </div> -->
+    <!-- smoothies__cards cards -->
 
-    </section>
+    <!-- </section> --> -->
     <!-- smoothies -->
 
     <section class="about">
