--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- </section> --> -->
     <!-- smoothies -->
 
-    <section class="about">
+    <!-- <section class="about">
         <img class="about__img" src="assets/images/summer.png" alt="summer">
         <div class="about__wrapper">
             <h2 class="about__title title">What makes Smoothie an <span class="about__title--orange">awesome
@@ -196,7 +196,7 @@
             </button>
         </div>
         <!-- about__wrapper -->
-    </section>
+    <!-- </section> --> -->
     <!-- about -->
 
     <!-- products -->
