--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <!-- products -->
 
     <!-- story -->
-    <section class="story">
+    <!-- <section class="story">
         <div class="story__inner">
             <div class="story__box">
                 <h2 class="story__title title title--orange">Our story</h2>
@@ -245,13 +245,13 @@
                 <button class="story__btn btn btn--green">Who we are</button>
             </div>
             <!-- story__box -->
-            <div class="story__content">
+    <!-- <div class="story__content">
                 <img class="story__image" src="assets/images/img.jpg" alt="our story">
-            </div>
-            <!-- story__content -->
-        </div>
-        <!-- story__inner -->
-    </section>
+            </div> -->
+    <!-- story__content -->
+    <!-- </div> -->
+    <!-- story__inner -->
+    <!-- </section> --> -->
     <!-- story -->
 
     <!-- testimonials -->
