--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <!-- blog -->
 
     <!-- instagram -->
-    <section class="instagram">
+    <!-- <section class="instagram">
         <h2 class="instagram__title title title--green"><a class="instagram__link" href="#">ashasuperfoods</a></h2>
         <div class="instagram__inner">
             <div class="instagram__picture"><img class="instagram__img" src="assets/images/instagramm_1.jpg"
@@ -321,7 +321,7 @@
                     alt="instagramm"></div>
         </div>
         <!-- instagram__inner -->
-    </section>
+    <!-- </section> --> -->
     <!-- instagram  -->
 
     <!-- footer -->
