--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <!-- instagram  -->
 
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer__top">
             <div class="footer__wrapper">
                 <a class="footer__logo logo" href="#">
@@ -341,7 +341,7 @@
                     </ul>
                 </div>
                 <!-- footer__info info -->
-                <div class="footer__payment payment">
+    <!-- <div class="footer__payment payment">
                     <h4 class="footer__title title">Payment</h4>
                     <div class="payment__box">
                         <img class="payment__img" src="assets/images/amex.png" alt="amex">
@@ -355,11 +355,11 @@
                         <img class="payment__img" src="assets/images/shopify_pay.png" alt="shopify pay">
 
                         <img class="payment__img" src="assets/images/visa.png" alt="visa">
-                    </div>
-                    <!-- payment__box -->
-                </div>
-                <!-- footer__payment payment -->
-                <div class="footer__box">
+                    </div> -->
+    <!-- payment__box -->
+    <!-- </div> -->
+    <!-- footer__payment payment -->
+    <!-- <div class="footer__box">
                     <h4 class="footer__title title">Don’t miss out!</h4>
                     <form class="footer__form">
                         <input class="footer__input" type="email" value="" placeholder="Subscribe to our newsletter"
@@ -386,21 +386,21 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
-                    <!-- footer__inner -->
-                </div>
-                <!-- footer__box -->
-            </div>
-            <!-- footer__wrapper -->
-        </div>
-        <!-- footer__top -->
-        <div class="footer__bottom ">
+                    </div> -->
+    <!-- footer__inner -->
+    <!-- </div> -->
+    <!-- footer__box -->
+    <!-- </div> -->
+    <!-- footer__wrapper -->
+    <!-- </div> -->
+    <!-- footer__top -->
+    <!-- <div class="footer__bottom ">
             <small class="footer__small">© 2020. All Rights Reserved.</small>
 
             <a href="#top" class="footer__link"></a>
-        </div>
-        <!-- footer__bottom -->
-    </footer>
+        </div> -->
+    <!-- footer__bottom -->
+    <!-- </footer> --> -->
 
     <script src="./js/script.js">
 
