media queries in 768px in header

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                 </div>
                 <!-- header__navigation -->
                 <button class="header__burger-btn">
-                    <span></span>
-                    <img class="header__burger-img" src="./assets/images/menu.svg" alt="menu">
+                    <span class="header__burger-line"></span>
                 </button>
                 <div class="header__logo logo">
                     <a class="logo__link" href="#">
