--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         </p>
         <!-- text -->
 
-        <div class="smoothies__cards cards">
-            <div class="cards__item">
+        <div class="smoothies__cards">
+            <div class="smoothies__item">
                 <img class="cards__icon" src="assets/images/Plant_Based.png" alt="Plant Based">
                 <h3 class="cards__desc">Plant Based</h3>
             </div>
