media smoothies 768px

--- a/index.html
+++ b/index.html
@@ -130,43 +130,43 @@
 
         <div class="smoothies__cards">
             <div class="smoothies__item">
-                <img class="cards__icon" src="assets/images/Plant_Based.png" alt="Plant Based">
-                <h3 class="cards__desc">Plant Based</h3>
+                <img class="smoothies__icon" src="assets/images/Plant_Based.png" alt="Plant Based">
+                <h3 class="smoothies__desc">Plant Based</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/vegan.png" alt="vegan">
-                <h3 class="cards__desc">Vegan</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/vegan.png" alt="vegan">
+                <h3 class="smoothies__desc">Vegan</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/Paleo.png" alt="Paleo">
-                <h3 class="cards__desc">Paleo</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/Paleo.png" alt="Paleo">
+                <h3 class="smoothies__desc">Paleo</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/Gluten_Free.png" alt="Gluten-Free">
-                <h3 class="cards__desc">Gluten-Free</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/Gluten_Free.png" alt="Gluten-Free">
+                <h3 class="smoothies__desc">Gluten-Free</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/Corn_Free.png" alt="Corn-Free">
-                <h3 class="cards__desc">Corn-Free</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/Corn_Free.png" alt="Corn-Free">
+                <h3 class="smoothies__desc">Corn-Free</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/Soy_Free.png" alt="Soy-Free">
-                <h3 class="cards__desc">Soy-Free</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/Soy_Free.png" alt="Soy-Free">
+                <h3 class="smoothies__desc">Soy-Free</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/Ayurvedic.png" alt="Ayurvedic">
-                <h3 class="cards__desc">Ayurvedic</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/Ayurvedic.png" alt="Ayurvedic">
+                <h3 class="smoothies__desc">Ayurvedic</h3>
             </div>
 
-            <div class="cards__item">
-                <img class="cards__icon" src="assets/images/Made_With_Love.png" alt="Made With Love">
-                <h3 class="cards__desc">Made With Love</h3>
+            <div class="smoothies__item">
+                <img class="smoothies__icon" src="assets/images/Made_With_Love.png" alt="Made With Love">
+                <h3 class="smoothies__desc">Made With Love</h3>
             </div>
 
         </div> -->
