--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <!-- about -->
 
     <!-- products -->
-    <!-- <section class="products">
+    <section class="products">
         <div class="products__wrapper">
             <div class="products__item products__item--brown">
                 <img class="products__img" src="assets/images/Dark_Chocolate.png" alt="Dark chocolate">
@@ -231,7 +231,7 @@
             </div>
         </div>
         <!-- products__wrapper -->
-    <!-- </section> --> -->
+    </section>
     <!-- products -->
 
     <!-- story -->
