fixed bags in media queries for 768

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- story
 
     <!-- testimonials -->
-    <!-- <section class="testimonials">
+    <section class="testimonials">
         <div class="testimonials__inner">
             <h2 class="testimonials__title title title--orange">Why clients <span
                     class="testimonials__title--big">LOVE</span> us?
@@ -270,17 +270,17 @@
                     <cite class="testimonials__cite">- from Santa Monica, CA</cite>
                 </div>
                 <!-- testimonials__textbox -->
-    <!-- <img class="testimonials__img" src="assets/images/reviews.png" alt="reviews">
-            </div> -->
-    <!-- testimonials__box -->
-    <!-- <div class="testimonials__container">
-                <button class="testimonials__btn-left btn"></button>
-                <button class="testimonials__btn-right btn"></button>
-            </div> -->
-    <!-- testimonials__container -->
-    <!-- </div> -->
-    <!-- testimonials__inner -->
-    <!-- </section> --> -->
+                <img class="testimonials__img" src="assets/images/reviews.png" alt="reviews">
+            </div>
+            <!-- testimonials__box -->
+            <div class="testimonials__container">
+                <button class="testimonials__btn btn btn--left"></button>
+                <button class="testimonials__btn btn btn--right"></button>
+            </div>
+            <!-- testimonials__container -->
+        </div>
+        <!-- testimonials__inner -->
+    </section>
     <!-- testimonials -->
 
     <!-- blog -->
