--- a/index.html
+++ b/index.html
@@ -328,41 +328,69 @@
     <!-- instagram  -->
 
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="footer__top">
             <div class="footer__wrapper">
                 <a class="footer__logo logo" href="#">
                     <img class="logo__img" src="assets/images/logo.png" alt="logo">
                 </a>
-                <div class="footer__info info">
-                    <h4 class="footer__title title">Information</h4>
-                    <ul class="info__list">
-                        <li class="info__item"><a class="info__link" href="#">Search</a></li>
-                        <li class="info__item"><a class="info__link" href="#">Contact us</a></li>
-                        <li class="info__item"><a class="info__link" href="#">Terms & Conditions</a></li>
-                        <li class="info__item"><a class="info__link" href="#">Privacy Policy</a></li>
-                    </ul>
+                <div class="footer__wrap">
+                    <div class="footer__info">
+                        <h4 class="footer__title title">Information</h4>
+                        <ul class="footer__info-list">
+                            <li class="footer__info-item">
+                                <a class="footer__info-link" href="#">Search</a>
+                            </li>
+                            <li class="footer__info-item">
+                                <a class="footer__info-link" href="#">Contact us</a>
+                            </li>
+                            <li class="footer__info-item">
+                                <a class="footer__info-link" href="#">Terms & Conditions</a>
+                            </li>
+                            <li class="footer__info-item">
+                                <a class="footer__info-link" href="#">Privacy Policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- footer__info -->
+                    <div class="footer__pay">
+                        <h4 class="footer__title title">Payment</h4>
+
+                        <ul class="footer__pay-list">
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/amex.png" alt="amex">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/apple.png" alt="apple">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/maestro.png" alt="maestro">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/discover.png" alt="discover">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/jcb.png" alt="jcb">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/mastercard.png" alt="mastercard">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/paypal.png" alt="paypal">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/shopify_pay.png" alt="shopify pay">
+                            </li>
+                            <li class="footer__pay-item">
+                                <img class="footer__pay-img" src="assets/images/visa.png" alt="visa">
+                            </li>
+                        </ul>
+                        <!-- footer__pay-list -->
+                    </div>
+                    <!-- footer__inner -->
                 </div>
-                <!-- footer__info info -->
-    <!-- <div class="footer__payment payment">
-                    <h4 class="footer__title title">Payment</h4>
-                    <div class="payment__box">
-                        <img class="payment__img" src="assets/images/amex.png" alt="amex">
-                        <img class="payment__img" src="assets/images/apple.png" alt="apple">
-                        <img class="payment__img" src="assets/images/maestro.png" alt="maestro">
-                        <img class="payment__img" src="assets/images/discover.png" alt="discover">
-                        <img class="payment__img" src="assets/images/jcb.png" alt="jcb">
-                        <img class="payment__img" src="assets/images/mastercard.png" alt="mastercard">
-                        <img class="payment__img" src="assets/images/paypal.png" alt="paypal">
-
-                        <img class="payment__img" src="assets/images/shopify_pay.png" alt="shopify pay">
-
-                        <img class="payment__img" src="assets/images/visa.png" alt="visa">
-                    </div> -->
-    <!-- payment__box -->
-    <!-- </div> -->
-    <!-- footer__payment payment -->
-    <!-- <div class="footer__box">
+                <!-- footer__pay -->
+                <div class="footer__box">
                     <h4 class="footer__title title">Don’t miss out!</h4>
                     <form class="footer__form">
                         <input class="footer__input" type="email" value="" placeholder="Subscribe to our newsletter"
@@ -389,21 +417,22 @@
                                 </a>
                             </li>
                         </ul>
-                    </div> -->
-    <!-- footer__inner -->
-    <!-- </div> -->
-    <!-- footer__box -->
-    <!-- </div> -->
-    <!-- footer__wrapper -->
-    <!-- </div> -->
-    <!-- footer__top -->
-    <!-- <div class="footer__bottom ">
+                    </div>
+                    <!-- footer__inner -->
+                </div>
+                <!-- footer__box -->
+            </div>
+            <!-- footer__wrapper -->
+        </div>
+        <!-- footer__top -->
+        <div class="footer__bottom ">
             <small class="footer__small">© 2020. All Rights Reserved.</small>
 
             <a href="#top" class="footer__link"></a>
-        </div> -->
-    <!-- footer__bottom -->
-    <!-- </footer> --> -->
+        </div>
+        <!-- footer__bottom -->
+    </footer>
+    <!-- footer -->
 
     <script src="./js/script.js">
 
