--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
             <!-- story__box -->
             <div class="story__content">
-                <img class="story__image" src="assets/images/img.jpg" alt="our story">
+                <img class="story__img" src="assets/images/img.jpg" alt="our story">
             </div>
             <!-- story__content -->
         </div>
