media queries 1440 in css

--- a/index.html
+++ b/index.html
@@ -207,25 +207,25 @@
         <div class="products__wrapper">
             <div class="products__item products__item--brown">
                 <img class="products__img" src="assets/images/Dark_Chocolate.png" alt="Dark chocolate">
-                <h3 class="products__label">Dark Chocolate Smoothie</h3>
+                <h3 class="products__title">Dark Chocolate Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <button class="products__btn btn">Buy</button>
             </div>
             <div class="products__item products__item--green">
                 <img class="products__img" src="assets/images/Vegan_Lettuce.png" alt="vegan Lettuce">
-                <h3 class="products__label">Vegan Lettuce Smoothie</h3>
+                <h3 class="products__title">Vegan Lettuce Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <button class="products__btn btn">Buy</button>
             </div>
             <div class="products__item products__item--yellow">
                 <img class="products__img" src="assets/images/Lemon_Ginger.png" alt="Lemon Ginger">
-                <h3 class="products__label">Lemon Ginger Smoothie</h3>
+                <h3 class="products__title">Lemon Ginger Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <button class="products__btn btn">Buy</button>
             </div>
             <div class="products__item products__item--orange">
                 <img class="products__img" src="assets/images/Turmeric_Garlic.png" alt="Turmeric Garlic">
-                <h3 class="products__label">Turmeric Garlic Smoothie</h3>
+                <h3 class="products__title">Turmeric Garlic Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <button class="products__btn btn">Buy</button>
             </div>
@@ -275,7 +275,7 @@
             <!-- testimonials__box -->
             <div class="testimonials__container">
                 <button class="testimonials__btn btn btn--left"></button>
-                <button class="testimonials__btn btn btn--right"></button>
+                <button class="testimonials__btn btn"></button>
             </div>
             <!-- testimonials__container -->
         </div>
