--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                 <button class="header__burger-btn">
                     <span class="header__burger-line"></span>
                 </button>
-                <div class="header__logo logo">
-                    <a class="logo__link" href="#">
-                        <img class="logo__img" src="assets/images/logo.png" alt="logo">
-                    </a>
-                </div>
+
+                <a class="header__logo logo" href="#">
+                    <img class="logo__img" src="assets/images/logo.png" alt="logo">
+                </a>
+
                 <!-- header__logo -->
             </div> <!-- header-top -->
 
