fixed bags in css

--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
     <!-- about -->
     <section class="about">
         <div class="about__inner">
-            <img class="about__img" src="assets/images/summer.png" alt="summer">
+            <div class="about__wrap">
+                <img class="about__img" src="assets/images/summer.png" alt="summer">
+            </div>
+            <!-- about__wrap -->
             <div class="about__wrapper">
                 <h2 class="about__title title">What makes Smoothie an <span class="about__title--orange">awesome
                         drink?</span>
